fix z-index

--- a/src/containers/Menu/Menu.css
+++ b/src/containers/Menu/Menu.css
@@ -8,7 +8,7 @@
   width: 80px;
   justify-content: center;
   align-items: center;
-  z-index: 90;
+  z-index: 1000000;
 }
 
 .menu-btn span,
